# The-Dev-Terminal

./: .gitignore  Cargo.toml  README.md  STALL_RECOVERY.json  main-rules-prompt.json  week1.json  week2.json  week3.json  week4.json
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  grid.rs  lib.rs  perf.rs  pty.rs  scrollback.rs  vt.rs
crates/ui-wgpu/: Cargo.toml
crates/ui-wgpu/src/: colored_text.rs  colored_text.wgsl  lib.rs  quad.wgsl  renderer.rs  text_renderer.rs  text_shader.wgsl
crates/ui-wgpu/src/shaders/: selection.wgsl
