[package]
name = "the-dev-terminal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
portable-pty = { workspace = true }
vte = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
unicode-width = "0.1"

[lib]
name = "the_dev_terminal_core"
path = "src/lib.rs"