[package]
name = "the-dev-terminal-ui-wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
the-dev-terminal-core = { path = "../core" }
wgpu = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
raw-window-handle = { workspace = true }
glyphon = "0.5"
cosmic-text = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }

[lib]
name = "the_dev_terminal_ui_wgpu"
path = "src/lib.rs"